--- a/views/signed.handlebars
+++ b/views/signed.handlebars
@@ -7,7 +7,7 @@
     <div class="user-sig">
         <img src="{{userSig}}" alt="" id="user-signed-img">
     </div>
-    <p>whatever..man, <a href="/signers">here're some of your co-signees</a> </p>
+    <p>whatever..<a href="/signers">here're some of your co-signees</a> </p>
 </div>
 
-{{> deco}}
+{{> deco_2}}
