--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -4,6 +4,6 @@
     <h3>{{firstName}} {{lastName}}</h3>
 {{/name}}
 
-<p>have a nice uprising, anyway!</p>
+<p><h1>have a nice uprising, anyway!</h1></p>
 
 {{> deco}}
