--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,15 +16,25 @@ section, .content {
     align-items: center;
 }
 
+.introduction {
+    text-align: center;
+}
+
 form {
+    width: 500px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 input {
+    width: 100%;
     background: rgba(255, 255, 255, 0.3);
     border: none;
     border-radius: 3px;
-        box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.3);
+}
+label {
+    align-self: flex-start;
 }
 .campagin-deco img {
     position: relative;
@@ -61,6 +71,7 @@ canvas {
 }
 
 button {
+    width: 80px;
     background: limegreen;
     border: none;
     border-radius: 3px;
