--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,9 +1,10 @@
-
+{{> logout}}
 
 {{#name}}
     <h3>{{firstName}} {{lastName}}</h3>
 {{/name}}
 
-<p><h1>have a nice uprising, anyway!</h1></p>
+<p><h1>have a nice movement, anyway!</h1></p>
+<p><a href="/signed">wanna see your signature again?</a></p>
 
 {{> deco}}
