--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,13 +6,14 @@
 <div class="content">
     <form class="" action="/login/" method="post" enctype="application/x-www-form-urlencoded">
         <input type="email" name="email">
-        <label for="email">your email</label>
+        <label for="email">your email *</label>
         <input type="password" name="pass">
-        <label for="password">your password</label>
+        <label for="password">your password *</label>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <button type="submit" name="register-submit">login</button>
     </form>
-    <p>{{msg}}</p>
+    <p class="message">{{msg}}</p>
+    <p>or would you like to register? <a href="/register">go to register page</a> </p>
 </div>
 
 {{> deco_2}}
