petition - part 4 works

--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,7 +1,11 @@
 {{> logout}}
 
 {{#name}}
-    <h3>{{firstName}} {{lastName}}</h3>
+    {{#if userUrl}}
+        <h3><a href="{{userUrl}}" target="_blank">{{firstName}} {{lastName}}</a> {{age}} <a href="signers/{{city}}">{{city}}</a> </h3>
+    {{else}}
+        <h3>{{firstName}} {{lastName}} {{age}} <a href="signers/{{city}}">{{city}}</a> </h3>
+    {{/if}}
 {{/name}}
 
 <p><h1>have a nice movement, anyway!</h1></p>
