petition - part 5 + bonus works

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
         <input type="email" name="email">
         <label for="email">your email *</label>
         <input type="password" name="pass">
-        <label for="password">your password *</label>
+        <label for="pass">your password *</label>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <button type="submit" name="register-submit">login</button>
     </form>
