--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,7 +14,7 @@
         <input type="text" name="userUrl" placeholder="http..">
         <label for="userUrl">your website</label>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
-        <button type="submit" name="register-submit">continue</button>
+        <button type="submit" name="profile-submit">continue</button>
     </form>
     <p class="message">{{msg}}</p>
     <p>in case you don't like to share, feel free to just continue..</p>
