--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -12,7 +12,7 @@
         <input type="email" name="email">
         <label for="email">your email *</label>
         <input type="password" name="pass">
-        <label for="password">choose password *</label>
+        <label for="pass">choose password *</label>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <button type="submit" name="register-submit">register</button>
     </form>
