--- a/views/delete.handlebars
+++ b/views/delete.handlebars
@@ -2,7 +2,8 @@
 <div class="">
     <h1>are you sure you want to delete your account?</h1>
     <form class="" action="/delete-account/" method="post" enctype="application/x-www-form-urlencoded">
-        <button type="submit" name="delete" value="account">delete petition account</button>
+        <button type="submit" name="delete" value="account"><i class="fas fa-times-circle fa-2x"></i></button>
+        <a href="/signed">or would you like to go back?</a>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
     </form>
 </div>
