--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,11 @@
     color: ghostwhite;
 }
 
+*:focus {
+    outline: 0;
+    box-shadow: 3px 5px 4px 0px rgba(0, 0, 0, 0.3);
+}
+
 body {
     background: green;
 }
@@ -30,6 +35,7 @@ form {
     flex-direction: column;
     align-items: center;
 }
+
 input {
     width: 100%;
     background: rgba(255, 255, 255, 0.3);
@@ -37,6 +43,7 @@ input {
     border-radius: 3px;
     box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.3);
 }
+
 label {
     align-self: flex-start;
 }
@@ -79,6 +86,7 @@ label {
 canvas {
     background: rgba(255, 255, 255, 0.3);
     border: 1px dashed rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
     cursor: crosshair;
     box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.3);
 }
@@ -95,6 +103,15 @@ button {
     box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.3);
 }
 
+button:hover {
+    box-shadow: 3px 5px 4px 0px rgba(0, 0, 0, 0.3);
+    opacity: 0.7;
+}
+button:active {
+    box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.3);
+    transform: translate(1px, 1px);
+}
+
 .signers button {
     min-width: 350px;
     background: none;
@@ -103,6 +120,10 @@ button {
     font-size: 13px;
     opacity: 1;
     cursor: pointer;
+}
+
+.signers button:hover, a:hover {
+    opacity: 0.7;
 }
 
 .line {
@@ -115,7 +136,8 @@ p.message {
     color: gold;
 }
 
-#user-signed-img {
-    width: 500px;
-    height: 200px;
+.user-sig > img{
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.3);
 }
