--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
         <input type="password" name="pass">
         <label for="pass">your password *</label>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
-        <button type="submit" name="register-submit">login</button>
+        <button type="submit" name="register-submit"><i class="fas fa-sign-in-alt"></i>login</button>
     </form>
     <p class="message">{{msg}}</p>
     <p>or would you like to register? <a href="/register">go to register page</a> </p>
