--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -14,7 +14,7 @@
         <input type="password" name="pass">
         <label for="pass">choose password *</label>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
-        <button type="submit" name="register-submit">register</button>
+        <button type="submit" name="register-submit"><i class="fas fa-user-plus"></i>register</button>
     </form>
     <p class="message">{{msg}}</p>
     <p>are you already registered? <a href="/login">go to login page</a> </p>
