--- a/views/partials/logout.handlebars
+++ b/views/partials/logout.handlebars
@@ -1,3 +1,3 @@
 <div class="logout">
-    <a class="logout-link" href="/logout"><h4>logout<i class="fas fa-sign-out-alt"></i></h4></a>
+    <a class="logout-link" href="/logout"><h4><i class="fas fa-sign-out-alt"></i>logout</h4></a>
 </div>
