--- a/views/signed.handlebars
+++ b/views/signed.handlebars
@@ -6,15 +6,16 @@
 <div class="content">
     <p>..well, {{user.first}}, ahm.. great, I guess.. so, here's your signature:</p>
     <div class="user-sig">
-        <img src="{{userSig}}" alt="" id="user-signed-img">
+        <img src="{{userSig.signature}}" alt="" id="user-signed-img">
     </div>
+    <p>{{userSig.created_at}}</p>
     <p>whatever.. </p>
     <form class="signers" action="/delete/" method="post" enctype="application/x-www-form-urlencoded">
         <a href="/signers">here're some of your co-signees</a>
         <a href="/edit-profile">edit your profile</a>
         <div class="line"></div>
-        <button type="submit" name="delete" value="signature">withdraw support and delete signature <i class="fas fa-times-circle"></i></button>
-        <button type="submit" name="delete" value="account">delete petition account <i class="fas fa-times-circle"></i></button>
+        <button type="submit" name="delete" value="signature"><i class="fas fa-times-circle"></i>withdraw support and delete signature</button>
+        <button type="submit" name="delete" value="account"><i class="fas fa-times-circle"></i>delete petition account</button>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
     </form>
 </div>
