petition - remodularized app with router

--- a/views/signed.handlebars
+++ b/views/signed.handlebars
@@ -9,6 +9,7 @@
         <img src="{{userSig.signature}}" alt="" id="user-signed-img">
     </div>
     <p>{{userSig.created_at}}</p>
+    <div class="line"></div>
     <p>whatever.. </p>
     <form class="signers" action="/delete/" method="post" enctype="application/x-www-form-urlencoded">
         <a href="/signers">here're some of your co-signees</a>
