--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -14,8 +14,9 @@
 
 
 </div>
-
+<div class="line"></div>
 <p><h1>have a nice movement, anyway!</h1></p>
+<div class="line"></div>
 {{#if aggregCity}}
     <p><a href="/signers">wanna go back to all signees?</a></p>
 {{/if}}
