--- a/views/layouts/petitionLogin.handlebars
+++ b/views/layouts/petitionLogin.handlebars
@@ -14,8 +14,9 @@
             <div class="logo">
                 <a href="/"> <img src="/img/android-chrome-192x192.png" alt="logo">ny </a>
             </div>
-            {{> logout}}
+            <div class=""></div>
         </header>
+
         <section>
             {{{body}}}
         </section>
