sanatizing and other input formatters on all user inputs added

--- a/views/profile-edit.handlebars
+++ b/views/profile-edit.handlebars
@@ -9,7 +9,7 @@
         <label for="first">first name</label>
         <input type="text" name="last" value="{{userProfile.last}}">
         <label for="last">last name</label>
-        <input type="email" name="email" value="{{userProfile.email}}">
+        <input type="text" name="email" value="{{userProfile.email}}">
         <label for="email">your email</label>
         <input type="text" name="city" value="{{userProfile.city}}">
         <label for="city">your city</label>
