--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -9,7 +9,7 @@
         <label for="first">first name *</label>
         <input type="text" name="last">
         <label for="last">last name *</label>
-        <input type="email" name="email">
+        <input type="text" name="email">
         <label for="email">your email *</label>
         <input type="password" name="pass">
         <label for="pass">choose password *</label>
