--- a/views/layouts/petitionAll.handlebars
+++ b/views/layouts/petitionAll.handlebars
@@ -17,6 +17,7 @@
             {{> logout}}
         </header>
         <section>
+            <div class="header-padding"></div>
             {{{body}}}
         </section>
 
