--- a/views/layouts/petitionLogin.handlebars
+++ b/views/layouts/petitionLogin.handlebars
@@ -18,6 +18,7 @@
         </header>
 
         <section>
+            <div class="header-padding"></div>
             {{{body}}}
         </section>
 
