--- a/views/sign.handlebars
+++ b/views/sign.handlebars
@@ -1,18 +1,20 @@
-<div class="introduction">
-    <h1>hey you.. join the cause!</h1>
-    <h2>we petition against anything!</h2>
-</div>
-<div class="indi-address">
-    <em><h4>Hello {{user.first}} {{user.last}}. to support the movement you need to sign here..</h4> </em>
-</div>
-<div class="content">
-    <form class="" action="/sign/" method="post" enctype="application/x-www-form-urlencoded">
-        <input type="hidden" name="signature">
-        <canvas id="signature" width="500" height="100"></canvas>
-        <label for="signature">sign please (double tab to reset field..)</label>
-        <input type="hidden" name="_csrf" value="{{csrfToken}}">
-        <button type="submit" name="petition-submit">submit</button>
-    </form>
+<div class="container">
+    <div class="introduction">
+        <p><h1>hey you.. join the cause!</h1></p>
+        <h2>we petition against anything!</h2>
+    </div>
+    <div class="indi-address">
+        <em><h4>Hello {{user.first}} {{user.last}}. to support the movement you need to sign here..</h4> </em>
+    </div>
+    <div class="content">
+        <form class="" action="/sign/" method="post" enctype="application/x-www-form-urlencoded">
+            <input type="hidden" name="signature">
+            <canvas id="signature" width="500" height="100"></canvas>
+            <label for="signature">sign please (double tab to reset field..)</label>
+            <input type="hidden" name="_csrf" value="{{csrfToken}}">
+            <button type="submit" name="petition-submit">submit</button>
+        </form>
+    </div>
 </div>
 
 {{> deco}}
