--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,9 @@
-<div class="introduction">
-    <h1>we petition against anything!</h1>
-    <h2>please login to sign the petition</h2>
-</div>
 
-<div class="content">
+<div class="content container">
+    <p><h1>we petition against anything!</h1></p>
+    <h2>please login to sign the petition</h2>
     <form class="" action="/login/" method="post" enctype="application/x-www-form-urlencoded">
-        <input type="email" name="email">
+        <input type="email" placeholder="eg. dori@gray.me" name="email">
         <label for="email">your email *</label>
         <input type="password" name="pass">
         <label for="pass">your password *</label>
@@ -15,5 +13,7 @@
     <p class="message">{{msg}}</p>
     <p>or would you like to register? <a href="/register">go to register page</a> </p>
 </div>
+
+<div class="line"></div>
 
 {{> deco_2}}
