--- a/views/profile-edit.handlebars
+++ b/views/profile-edit.handlebars
@@ -1,19 +1,17 @@
-<div class="introduction">
-    <h1>we petition against anything!</h1>
-    <h2>you can edit your personal data and reset your password here..</h2>
-</div>
 
-<div class="content">
+<div class="content container">
+    <p><h1>we petition against anything!</h1></p> 
+    <h2>you can edit your personal data and reset your password here..</h2>
     <form class="" action="/edit-profile/" method="post" enctype="application/x-www-form-urlencoded">
-        <input type="text" name="first" value="{{userProfile.first}}">
+        <input type="text" name="first" placeholder="eg. Dorian" value="{{userProfile.first}}">
         <label for="first">first name</label>
-        <input type="text" name="last" value="{{userProfile.last}}">
+        <input type="text" name="last"  placeholder="eg. Gray" value="{{userProfile.last}}">
         <label for="last">last name</label>
-        <input type="text" name="email" value="{{userProfile.email}}">
+        <input type="text" name="email" placeholder="eg. dori@gray.me" value="{{userProfile.email}}">
         <label for="email">your email</label>
-        <input type="text" name="city" value="{{userProfile.city}}">
+        <input type="text" name="city" placeholder="eg. Sao Paolo" value="{{userProfile.city}}">
         <label for="city">your city</label>
-        <input type="text" name="age" value="{{userProfile.age}}">
+        <input type="text" name="age"  value="{{userProfile.age}}">
         <label for="age">your age</label>
         <input type="text" name="userUrl" placeholder="http.." value="{{userProfile.url}}">
         <label for="userUrl">your website</label>
@@ -27,5 +25,7 @@
     <p class="message">{{msg}}</p>
     <p>in case you don't like to change your password, just leave it empty..</p>
 </div>
+
+<div class="line"></div>
 
 {{> deco}}
