--- a/views/signed.handlebars
+++ b/views/signed.handlebars
@@ -1,23 +1,32 @@
-<div class="introduction">
-    <h1>you did it..</h1>
-</div>
 
-<div class="content">
-    <p>..well, {{user.first}}, ahm.. great, I guess.. so, here's your signature:</p>
+<div class="content container">
+    <p> <h1>you did it..</h1></p>
+    <p><h2>..well, {{user.first}}, ahm.. great, I guess.. so, here's your signature: </h2></p>
     <div class="user-sig">
         <img src="{{userSig.signature}}" alt="" id="user-signed-img">
     </div>
     <p>{{userSig.created_at}}</p>
-    <div class="line"></div>
-    <p>whatever.. </p>
+</div>
+
+<div class="line"></div>
+
+<div class="content container">
+    <p><h2> whatever.. </h2></p>
+    <a href="/signers">..here're some of your co-signees</a>
+</div>
+
+<div class="line"></div>
+
+<div class="container">
+    <p><h2>do stuff</h2></p>
+    <a href="/edit-profile">edit your profile</a>
     <form class="signers" action="/delete/" method="post" enctype="application/x-www-form-urlencoded">
-        <a href="/signers">here're some of your co-signees</a>
-        <a href="/edit-profile">edit your profile</a>
-        <div class="line"></div>
         <button type="submit" name="delete" value="signature"><i class="fas fa-times-circle"></i> withdraw support and delete signature</button>
         <button type="submit" name="delete" value="account"><i class="fas fa-times-circle"></i> delete petition account</button>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
     </form>
 </div>
+
+<div class="line"></div>
 
 {{> deco_2}}
