--- a/views/layouts/petitionAll.handlebars
+++ b/views/layouts/petitionAll.handlebars
@@ -7,12 +7,12 @@
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/style.css">
-        <title>any petition</title>
+        <title>no-to-evil</title>
     </head>
     <body>
         <header>
             <div class="logo">
-                <a href="/"> <img src="/img/android-chrome-192x192.png" alt="logo">ny </a>
+                <a href="/" class="navAnimTrig"> <img src="/img/android-chrome-192x192.png" alt="logo">vil-no </a>
             </div>
             {{> logout}}
         </header>
