--- a/views/profile-edit.handlebars
+++ b/views/profile-edit.handlebars
@@ -1,6 +1,6 @@
 
 <div class="content container">
-    <p><h1>we petition against anything!</h1></p> 
+    <p><h1>we petition against evil!</h1></p>
     <h2>you can edit your personal data and reset your password here..</h2>
     <form class="" action="/edit-profile/" method="post" enctype="application/x-www-form-urlencoded">
         <input type="text" name="first" placeholder="eg. Dorian" value="{{userProfile.first}}">
@@ -20,7 +20,7 @@
         <input type="password" name="passRep">
         <label for="passRep">new password (repeat please)</label>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
-        <button type="submit" name="profile-edit-submit">continue</button>
+        <button class="navAnimTrig" type="submit" name="profile-edit-submit">continue</button>
     </form>
     <p class="message">{{msg}}</p>
     <p>in case you don't like to change your password, just leave it empty..</p>
