--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,5 +1,5 @@
 <div class="content container">
-    <p><h1>we petition against anything!</h1></p>
+    <p><h1>we petition against evil!</h1></p>
     <h2>please register to sign the petition</h2>
     <form class="" action="/register/" method="post" enctype="application/x-www-form-urlencoded">
         <input type="text" name="first" placeholder="eg. Dorian" value="{{tmpUser.first}}">
@@ -13,10 +13,10 @@
         <input type="password" name="passRep">
         <label for="passRep">password (repeat please) *</label>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
-        <button type="submit" name="register-submit"><i class="fas fa-user-plus"></i> register</button>
+        <button class="navAnimTrig" type="submit" name="register-submit"><i class="fas fa-user-plus"></i> register</button>
     </form>
     <p class="message">{{msg}}</p>
-    <p>are you already registered? <a href="/login">go to login page</a> </p>
+    <p>are you already registered? <a class="navAnimTrig" href="/login">go to login page</a> </p>
 </div>
 
 <div class="line"></div>
