--- a/views/signed.handlebars
+++ b/views/signed.handlebars
@@ -11,8 +11,8 @@
 <div class="line"></div>
 
 <div class="content container">
-    <p><h2> whatever.. </h2></p>
-    <a href="/signers">..here're some of your co-signees</a>
+    <p><h2> evil is almost on it's knees! </h2></p>
+    <a class="navAnimTrig" href="/signers">..here're some of your co-signees</a>
 </div>
 
 <div class="line"></div>
@@ -21,8 +21,8 @@
     <p><h2>do stuff</h2></p>
     <a href="/edit-profile">edit your profile</a>
     <form class="signers" action="/delete/" method="post" enctype="application/x-www-form-urlencoded">
-        <button type="submit" name="delete" value="signature"><i class="fas fa-times-circle"></i> withdraw support and delete signature</button>
-        <button type="submit" name="delete" value="account"><i class="fas fa-times-circle"></i> delete petition account</button>
+        <button class="navAnimTrig" type="submit" name="delete" value="signature"><i class="fas fa-times-circle"></i> withdraw support and delete signature</button>
+        <button class="navAnimTrig" type="submit" name="delete" value="account"><i class="fas fa-times-circle"></i> delete petition account</button>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
     </form>
 </div>
