touch sign added, final css and content swap

--- a/views/sign.handlebars
+++ b/views/sign.handlebars
@@ -10,7 +10,7 @@
         <form class="" action="/sign/" method="post" enctype="application/x-www-form-urlencoded">
             <input type="hidden" name="signature">
             <canvas id="signature" width="500" height="100"></canvas>
-            <label for="signature">sign please (double tab to reset field..)</label>
+            <label for="signature">sign please (use touch on mobile and mouse on desktop. double tab resets the field..)</label>
             <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <button class="navAnimTrig" type="submit" name="petition-submit">submit</button>
         </form>
